Refactor input IDs for cashout, transfer, and pay bill forms for clarity and consistency; update toggling feature script accordingly

--- a/homepage.html
+++ b/homepage.html
@@ -205,7 +205,6 @@
             ><br />
             <input
               type="password"
-              id="pin"
               placeholder="Enter 4 digit pin"
               class="input bg-[#F4F5F7FF] text-[#080808] font-light text-base text-left font-outfit rounded-[32px] mt-[12px] w-full p-3"
             />
@@ -258,7 +257,7 @@
             <br />
             <input
               type="number"
-              id="amount"
+              id="cashout-amount"
               placeholder="Enter amount to withdraw"
               class="input bg-[#F4F5F7FF] text-[#080808] font-light text-base text-left font-outfit rounded-[32px] mt-[12px] w-full"
             />
@@ -275,7 +274,6 @@
             <br />
             <input
               type="password"
-              id="pin"
               placeholder="Enter 4 digit pin number"
               class="input bg-[#F4F5F7FF] text-[#080808] font-light text-base text-left font-outfit rounded-[32px] mt-[12px] w-full"
             />
@@ -327,7 +325,7 @@
             <br />
             <input
               type="number"
-              id="amount"
+              id="transfer-amount"
               placeholder="Enter amount to transfer"
               class="input bg-[#F4F5F7FF] text-[#080808] font-light text-base text-left font-outfit rounded-[32px] mt-[12px] w-full"
             />
@@ -344,7 +342,6 @@
             <br />
             <input
               type="password"
-              id="pin"
               placeholder="Enter 4 digit pin number"
               class="input bg-[#F4F5F7FF] text-[#080808] font-light text-base text-left font-outfit rounded-[32px] mt-[12px] w-full"
             />
@@ -452,7 +449,7 @@
             <br />
             <input
               type="number"
-              id="amount"
+              id="paybill-amount"
               placeholder="Add Amount to pay"
               class="input bg-[#F4F5F7FF] text-[#080808] font-light text-base text-left font-outfit rounded-[32px] mt-[12px] w-full"
             />
@@ -469,7 +466,6 @@
             <br />
             <input
               type="password"
-              id="pin"
               placeholder="Enter 4 digit pin number"
               class="input bg-[#F4F5F7FF] text-[#080808] font-light text-base text-left font-outfit rounded-[32px] mt-[12px] w-full"
             />
