--- a/index.html
+++ b/index.html
@@ -19,33 +19,59 @@
       rel="stylesheet"
     />
   </head>
-  <body class="bg-[#F4F5F7FF] h-[100vh] flex justify-center items-center flex-col">
+  <body
+    class="bg-[#F4F5F7FF] h-[100vh] flex justify-center items-center flex-col"
+  >
     <!-- bg images -->
-     <div class="w-[316px] h-[130px] flex justify-center items-center bg-[url('./assets/bg.png')] bg-cover">
-        <img src="./assets/Group.png" alt="bg">
-     </div>
+    <div
+      class="w-[316px] h-[130px] flex justify-center items-center bg-[url('./assets/bg.png')] bg-cover"
+    >
+      <img src="./assets/Group.png" alt="bg" />
+    </div>
     <!-- form -->
-    <form class="bg-[#FFFFFFFF] p-[34px] rounded-3xl w-[402px]">
+    <form class="bg-[#FFFFFFFF] p-[34px] rounded-3xl w-[402px] mx-auto">
+      <!-- Mobile Number -->
       <div>
-        <label for="phone-number" class="text-[#080808] font-medium text-base text-left font-outfit">Mobile Number</label><br />
+        <label
+          for="phone-number"
+          class="text-[#080808] font-medium text-base text-left font-outfit"
+        >
+          Mobile Number
+        </label>
+        <br />
         <input
           type="text"
-          placeholder="Enter your number"
-          class="input bg-[#F4F5F7FF] text-[#080808] font-light text-base text-left font-outfit rounded-[32px] mt-[12px]"
           id="phone-number"
+          placeholder="Enter your number"
+          class="input bg-[#F4F5F7FF] text-[#080808] font-light text-base text-left font-outfit rounded-[32px] mt-[12px] w-full p-3"
         />
       </div>
+
+      <!-- 4 Digit Pin -->
       <div class="mt-[16px]">
-        <label for="pin" class="text-[#080808] font-medium text-base text-left font-outfit">4 Digit Pin</label><br />
+        <label
+          for="pin"
+          class="text-[#080808] font-medium text-base text-left font-outfit"
+        >
+          4 Digit Pin
+        </label>
+        <br />
         <input
           type="password"
-          placeholder="Enter 4 Digit Pin"
-          class="input bg-[#F4F5F7FF] text-[#080808] font-light text-base text-left font-outfit rounded-[32px] mt-[12px]"
           id="pin"
+          placeholder="Enter 4 Digit Pin"
+          class="input bg-[#F4F5F7FF] text-[#080808] font-light text-base text-left font-outfit rounded-[32px] mt-[12px] w-full p-3"
         />
       </div>
-      <button id="login-btn" class="btn btn-primary rounded-[32px] bg-[#0874F2] w-full mt-[16px]">Login</button>
+
+      <button
+        id="login-btn"
+        class="btn btn-primary rounded-[32px] bg-[#0874F2] w-full mt-[16px] p-3 text-white font-medium"
+      >
+        Login
+      </button>
     </form>
+
     <!-- js scripts -->
     <script src="./js files/script.js"></script>
   </body>
