--- a/homepage.html
+++ b/homepage.html
@@ -88,42 +88,42 @@
       >
         <div
           id="add-money"
-          class="w-[123px] h-[90px] flex flex-col justify-center items-center px-[10px] py-[20px] box-border border border-[rgba(8,8,8,0.1)] rounded-[12px] cursor-pointer hover:border-[#0874F2] hover:bg-[#F4F5F7] active:border-[#0874F2] active:bg-[#E8F0FE] transition"
+          class="utilities-btn w-[123px] h-[90px] flex flex-col justify-center items-center px-[10px] py-[20px] box-border border border-[rgba(8,8,8,0.1)] rounded-[12px] cursor-pointer hover:border-[#0874F2] hover:bg-[#F4F5F7] active:border-[#0874F2] active:bg-[#E8F0FE] transition"
         >
           <img src="./assets/wallet1.png" alt="add money" />
           <h3>Add Money</h3>
         </div>
         <div
           id="cashout"
-          class="w-[123px] h-[90px] flex flex-col justify-center items-center px-[10px] py-[20px] box-border border border-[rgba(8,8,8,0.1)] rounded-[12px] cursor-pointer hover:border-[#0874F2] hover:bg-[#F4F5F7] active:border-[#0874F2] active:bg-[#E8F0FE] transition"
+          class="utilities-btn w-[123px] h-[90px] flex flex-col justify-center items-center px-[10px] py-[20px] box-border border border-[rgba(8,8,8,0.1)] rounded-[12px] cursor-pointer hover:border-[#0874F2] hover:bg-[#F4F5F7] active:border-[#0874F2] active:bg-[#E8F0FE] transition"
         >
           <img src="./assets/send1.png" alt="Cashout" />
           <h3>Cashout</h3>
         </div>
         <div
           id="transfer-balance"
-          class="w-[123px] h-[90px] flex flex-col justify-center items-center px-[10px] py-[20px] box-border border border-[rgba(8,8,8,0.1)] rounded-[12px] text-center cursor-pointer hover:border-[#0874F2] hover:bg-[#F4F5F7] active:border-[#0874F2] active:bg-[#E8F0FE] transition"
+          class="utilities-btn w-[123px] h-[90px] flex flex-col justify-center items-center px-[10px] py-[20px] box-border border border-[rgba(8,8,8,0.1)] rounded-[12px] text-center cursor-pointer hover:border-[#0874F2] hover:bg-[#F4F5F7] active:border-[#0874F2] active:bg-[#E8F0FE] transition"
         >
           <img src="./assets/money1.png" alt="Transfer Money" />
           <h3>Transfer Money</h3>
         </div>
         <div
           id="get-bonus"
-          class="w-[123px] h-[90px] flex flex-col justify-center items-center px-[10px] py-[20px] box-border border border-[rgba(8,8,8,0.1)] rounded-[12px] cursor-pointer hover:border-[#0874F2] hover:bg-[#F4F5F7] active:border-[#0874F2] active:bg-[#E8F0FE] transition"
+          class="utilities-btn w-[123px] h-[90px] flex flex-col justify-center items-center px-[10px] py-[20px] box-border border border-[rgba(8,8,8,0.1)] rounded-[12px] cursor-pointer hover:border-[#0874F2] hover:bg-[#F4F5F7] active:border-[#0874F2] active:bg-[#E8F0FE] transition"
         >
           <img src="./assets/bonus1.png" alt="Get Bonus" />
           <h3>Get Bonus</h3>
         </div>
         <div
           id="pay-bill"
-          class="w-[123px] h-[90px] flex flex-col justify-center items-center px-[10px] py-[20px] box-border border border-[rgba(8,8,8,0.1)] rounded-[12px] cursor-pointer hover:border-[#0874F2] hover:bg-[#F4F5F7] active:border-[#0874F2] active:bg-[#E8F0FE] transition"
+          class="utilities-btn w-[123px] h-[90px] flex flex-col justify-center items-center px-[10px] py-[20px] box-border border border-[rgba(8,8,8,0.1)] rounded-[12px] cursor-pointer hover:border-[#0874F2] hover:bg-[#F4F5F7] active:border-[#0874F2] active:bg-[#E8F0FE] transition"
         >
           <img src="./assets/purse1.png" alt="pay bill" />
           <h3>Pay Bill</h3>
         </div>
         <div
           id="transactions"
-          class="w-[123px] h-[90px] flex flex-col justify-center items-center px-[10px] py-[20px] box-border border border-[rgba(8,8,8,0.1)] rounded-[12px] cursor-pointer hover:border-[#0874F2] hover:bg-[#F4F5F7] active:border-[#0874F2] active:bg-[#E8F0FE] transition"
+          class="utilities-btn w-[123px] h-[90px] flex flex-col justify-center items-center px-[10px] py-[20px] box-border border border-[rgba(8,8,8,0.1)] rounded-[12px] cursor-pointer hover:border-[#0874F2] hover:bg-[#F4F5F7] active:border-[#0874F2] active:bg-[#E8F0FE] transition"
         >
           <img src="./assets/transaction1.png" alt="Transactions" />
           <h3>Transactions</h3>
