--- a/homepage.html
+++ b/homepage.html
@@ -303,14 +303,12 @@
       <!-- transfer money -->
       <div id="transfer-form" class="mt-[31.5px]">
         <h1
-          class="text-[rgba(8,8,8,0.9)] font-outfit text-[18px] font-semibold mx-[24px] mb-[16px] text-left"
+          class="text-[rgba(8,8,8,0.9)] font-outfit text-[18px] font-semibold mx-[24px] mb-[16px]"
         >
           Transfer Money
         </h1>
 
-        <form
-          class="bg-white p-[34px] rounded-3xl w-full max-w-[402px] mx-auto"
-        >
+        <form class="bg-[#FFFFFFFF] p-[34px] rounded-3xl w-[402px] mx-auto">
           <!-- User Account Number -->
           <div>
             <label
@@ -319,13 +317,14 @@
             >
               User Account Number
             </label>
+            <br />
             <input
               type="text"
               id="account-number-for-transfer"
               name="accountNumber"
               placeholder="Enter 11 digit number"
               maxlength="11"
-              class="bg-[#F4F5F7] text-[#080808] font-light text-base font-outfit rounded-[32px] mt-[12px] w-full px-4 py-2 outline-none focus:ring-2 focus:ring-[#0874F2]"
+              class="input bg-[#F4F5F7FF] text-[#080808] font-light text-base text-left font-outfit rounded-[32px] mt-[12px] w-full p-3"
               required
             />
           </div>
@@ -338,13 +337,14 @@
             >
               Amount
             </label>
+            <br />
             <input
               type="number"
               id="amount-to-transfer"
               name="amount"
               placeholder="Enter amount to transfer"
               min="1"
-              class="bg-[#F4F5F7] text-[#080808] font-light text-base font-outfit rounded-[32px] mt-[12px] w-full px-4 py-2 outline-none focus:ring-2 focus:ring-[#0874F2]"
+              class="input bg-[#F4F5F7FF] text-[#080808] font-light text-base text-left font-outfit rounded-[32px] mt-[12px] w-full p-3"
               required
             />
           </div>
@@ -357,6 +357,7 @@
             >
               Pin Number
             </label>
+            <br />
             <input
               type="password"
               id="pin-for-transfer"
@@ -364,7 +365,7 @@
               placeholder="Enter 4 digit pin number"
               minlength="4"
               maxlength="4"
-              class="bg-[#F4F5F7] text-[#080808] font-light text-base font-outfit rounded-[32px] mt-[12px] w-full px-4 py-2 outline-none focus:ring-2 focus:ring-[#0874F2]"
+              class="input bg-[#F4F5F7FF] text-[#080808] font-light text-base text-left font-outfit rounded-[32px] mt-[12px] w-full p-3"
               required
             />
           </div>
@@ -373,7 +374,7 @@
           <button
             id="transfer-money-btn"
             type="submit"
-            class="rounded-[32px] bg-[#0874F2] w-full mt-[16px] p-3 text-white font-medium text-base hover:bg-[#0663cc] transition"
+            class="btn btn-primary rounded-[32px] bg-[#0874F2] w-full mt-[16px] p-3 text-white font-medium"
           >
             Send Now
           </button>
@@ -383,14 +384,12 @@
       <!-- get bonus section  -->
       <div id="get-bonus-form" class="mt-[31.5px]">
         <h1
-          class="text-[rgba(8,8,8,0.9)] font-outfit text-[18px] font-semibold mx-[24px] mb-[16px] text-left"
+          class="text-[rgba(8,8,8,0.9)] font-outfit text-[18px] font-semibold mx-[24px] mb-[16px]"
         >
           Get Bonus
         </h1>
 
-        <form
-          class="bg-white p-[34px] rounded-3xl w-full max-w-[402px] mx-auto"
-        >
+        <form class="bg-[#FFFFFFFF] p-[34px] rounded-3xl w-[402px] mx-auto">
           <!-- Bonus Coupon -->
           <div>
             <label
@@ -399,12 +398,13 @@
             >
               Enter Bonus Coupon
             </label>
+            <br />
             <input
               type="text"
               id="bonus-coupon"
               name="bonusCoupon"
               placeholder="Enter your coupon"
-              class="bg-[#F4F5F7] text-[#080808] font-light text-base font-outfit rounded-[32px] mt-[12px] w-full px-4 py-2 outline-none focus:ring-2 focus:ring-[#0874F2]"
+              class="input bg-[#F4F5F7FF] text-[#080808] font-light text-base text-left font-outfit rounded-[32px] mt-[12px] w-full p-3"
               required
             />
           </div>
@@ -413,7 +413,7 @@
           <button
             id="get-bonusby-coupon-btn"
             type="submit"
-            class="rounded-[32px] bg-[#0874F2] w-full mt-[16px] p-3 text-white font-medium text-base hover:bg-[#0663cc] transition"
+            class="btn btn-primary rounded-[32px] bg-[#0874F2] w-full mt-[16px] p-3 text-white font-medium"
           >
             Get Bonus
           </button>
