--- a/homepage.html
+++ b/homepage.html
@@ -523,14 +523,58 @@
       </div>
 
       <!-- transactions section -->
-      <div
-        id="transaction-history"
-        class="mt-[31.5px] border-2 border-[#0874F2] rounded-3xl w-full max-w-[402px] mx-auto p-5"
-      >
-        <p>this is transaction history</p>
+      <div id="transaction-history" class="mt-[31.5px]">
+        <!-- Header -->
+        <div class="flex justify-between items-center mx-[24px] mb-[16px]">
+          <h1
+            class="text-[rgba(8,8,8,0.9)] font-outfit text-[18px] font-semibold"
+          >
+            Transactions History
+          </h1>
+          <p class="text-[rgba(8,8,8,0.5)] font-outfit text-sm font-normal">
+            See all
+          </p>
+        </div>
+
+        <!-- Notification Card -->
+        <div
+          class="notification flex justify-between items-center w-[402px] mx-auto px-[16px] py-[13px] border border-[rgba(8,8,8,0.1)] rounded-[12px] bg-white"
+        >
+          <!-- Left Section -->
+          <div class="flex items-center">
+            <!-- Icon -->
+            <div
+              class="icon mr-[8px] p-[16px] rounded-[32px] bg-[rgba(8,8,8,0.05)]"
+            >
+              <img
+                src="./assets/wallet1.png"
+                alt="wallet1"
+                class="w-[23.5px] h-[23.5px]"
+              />
+            </div>
+
+            <!-- Content -->
+            <div class="content flex flex-col justify-between">
+              <div
+                class="text-[rgba(8,8,8,0.7)] font-outfit text-base font-semibold"
+              >
+                Electricity Bill
+              </div>
+              <div
+                class="text-[rgba(8,8,8,0.7)] font-outfit text-xs font-normal"
+              >
+                Today 01:44 AM
+              </div>
+            </div>
+          </div>
+
+          <!-- Options -->
+          <div class="options">
+            <i class="fa-solid fa-ellipsis-vertical"></i>
+          </div>
+        </div>
       </div>
     </div>
-
     <!-- js scripts -->
     <script src="./js files/homepage.js"></script>
     <script src="./js files/toggling-feature.js"></script>
