Enhance transaction history display; add margin to notification elements for improved layout

--- a/homepage.html
+++ b/homepage.html
@@ -28,7 +28,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body class="w-[450px] mx-auto bg-gray-100">
+  <body class="w-[450px] mx-auto bg-gray-100 mh-[110vh]">
     <div class="rounded-b-[24px] bg-white pb-[24px]">
       <!-- navbar -->
       <div
@@ -523,7 +523,7 @@
       </div>
 
       <!-- transactions section -->
-      <div id="transaction-history" class="mt-[31.5px]">
+      <div id="transaction-history" class="mt-[31.5px] mb-[12px]">
         <!-- Header -->
         <div class="flex justify-between items-center mx-[24px] mb-[16px]">
           <h1
@@ -538,7 +538,7 @@
 
         <!-- Notification Card -->
         <div
-          class="notification flex justify-between items-center w-[402px] mx-auto px-[16px] py-[13px] border border-[rgba(8,8,8,0.1)] rounded-[12px] bg-white"
+          class="notification flex justify-between items-center w-[402px] mx-auto px-[16px] py-[13px] border border-[rgba(8,8,8,0.1)] rounded-[12px] bg-white mb-[12px]"
         >
           <!-- Left Section -->
           <div class="flex items-center">
