Add logout functionality; implement logout button and associated script

--- a/homepage.html
+++ b/homepage.html
@@ -61,6 +61,7 @@
               class="fa-solid fa-arrow-right-from-bracket rotate-180 text-[#666768]"
             ></i
             ><span
+              id="logout-btn"
               class="text-[rgba(8,8,8,0.5)] font-outfit text-sm font-normal"
               >Log Out</span
             >
@@ -578,5 +579,6 @@
     <!-- js scripts -->
     <script src="./js files/homepage.js"></script>
     <script src="./js files/toggling-feature.js"></script>
+    <script src="./js files/logout.js"></script>
   </body>
 </html>
